<resources>
    <string name="app_name">TrackME</string>
    <string name="no_sms">No SMS</string>
    <string name="title_activity_main">TrackME</string>
    <string name="filter_title_gpstracker">GPS Tracker</string>
    <string name="messageText">Message Text</string>
    <string name="dateMessage">Date message</string>
    <string name="smsList">Sms list</string>
    <string name="nav_menu_item_home">Home</string>
    <string name="nav_menu_item_history">History</string>
    <string name="nav_menu_item_settings">Settings</string>
    <string name="nav_menu_item_gprsSettings">GPRS Settings</string>
    <string name="call">Call</string>
    <string name="trackerPosition">Tracker position</string>
    <string name="localPosition">Local position</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="lastDataText">The last known mobile data in the absence of GPS data</string>
    <string name="lac">Lac</string>
    <string name="cid">Cid</string>
    <string name="mnc">Mnc</string>
    <string name="mcc">Mcc</string>
</resources>
